--- a/playbooks/roles/xqueue/tasks/main.yml
+++ b/playbooks/roles/xqueue/tasks/main.yml
@@ -42,6 +42,19 @@
     - install
     - install:configuration
 
+- name: git checkout xqueue repo into {{ xqueue_code_dir }}
+  git:
+    dest: "{{ xqueue_code_dir }}"
+    repo: "{{ xqueue_source_repo }}"
+    version: "{{ xqueue_version }}"
+    accept_hostkey: yes
+  become_user: "{{ xqueue_user }}"
+  notify: restart the xqueue service
+  tags:
+    - install
+    - install:code
+
+
 - name: add gunicorn configuration file
   template:
     src: "xqueue_gunicorn.py.j2"
